--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
     <input type="text" placeholder="Enter email"id="in1"required><br>
     <label>Password</label>
     <input type="password" placeholder="password"id="in"required><br>
-    <a href="pro.html"> <input type="button" value="login" id="out" onclick=""></a>
+    <a href="news.html"> <input type="button" value="login" id="out" onclick=""></a>
 </center>
 </div>
 </div>
